bynkc/tests/fixtures/negative/355_embeds_variant_shape/input.bynk
commons demo.es
type E = enum { X }
type F = enum { Y }
type S = | A(e: F) embeds E as A
